--- a/src/style.css
+++ b/src/style.css
@@ -148,6 +148,7 @@ body {
   margin: 0;
   padding: 20px;
   background: #f0f0f0;
+  overflow-x: hidden;
 }
 
 nav a {
@@ -156,15 +157,33 @@ nav a {
 }
 .footer {
   background-color: #f4f1e8;
-  padding: 40px 20px;
+  padding-left: 100px;
+  /* padding: 40px 20px; */
   margin-top: 60px;
 }
 
-.footer hr {
-  margin-bottom: 20px;
+/* .footer hr {
+  width: 100%;
+  height: 2px;
   border: none;
-  border-top: 1px solid #aaa;
+  background-color: #666851;
+  margin-bottom: 24px;
+} */
+
+.footer-line {
+  border: 100vw;
+  height: 2px;
+  background-color: #666851;
+  width: 100%;
+  /* margin: 0; */
+  margin-top: 60px;
+  position: absolute;      
+  left: 0;
+  top: auto;
+  transform: none;
+  z-index: 10;             
 }
+
 
 .footer-grid {
   display: grid;
